Adding Cleaned up code/comments

--- a/PyBank/main.pybank.ipynb
+++ b/PyBank/main.pybank.ipynb
@@ -6,61 +6,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import proper modules for analysis \n",
     "import pandas as pd \n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file = Path('Resources/budget_data.csv')\n",
+    "from pathlib import Path\n",
+    "import sys\n",
+    "stdout_default = sys.stdout \n",
     "\n",
+    "#define input and output files for reading/writing\n",
+    "file = Path('Resources/budget_data.csv')\n",
+    "file_output =\"../PyBank/Analysis/output.txt\"\n",
+    "\n",
+    "#read csv file with panda module \n",
     "df = pd.read_csv(file)\n",
     "\n",
     "# Verified no dupe month rows\n",
     "# df['Date'].nunique() == df['Date'].count()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "#calculate requested agg functions \n",
     "total_months = df['Date'].nunique()\n",
     "total = df[\"Profit/Losses\"].sum()\n",
     "mean = df[\"Profit/Losses\"].mean()\n",
     "\n",
+    "#use .diff to create difference object and perform mean calculateion for avg change\n",
     "difference = df[\"Profit/Losses\"].diff()\n",
     "average_change = difference.mean().round(2)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
+    "#Add new Difference column and fill empty cells with 0. Also converts column to int\n",
     "df[\"Difference\"]= df[\"Profit/Losses\"].diff().fillna('0').astype('int64')\n",
     "\n",
-    "\n",
+    "#Use Min/Max to find the top increase and botom decrease rows \n",
     "increase_row = df[df['Difference'] == df['Difference'].max()]\n",
     "increase_date = increase_row['Date'].to_string(index=False)\n",
     "increase_amt =  increase_row['Difference'].to_string(index=False)\n",
@@ -69,32 +43,20 @@
     "decrease_date = decrease_row['Date'].to_string(index=False)\n",
     "decrease_amt =  decrease_row['Difference'].to_string(index=False)\n",
     "\n",
+    "with open(file_output, \"w\") as file:\n",
+    "    sys.stdout = file  # Now print statements will write to the file\n",
+    "    print(\"Financial Analysis\")\n",
+    "    print(\"\\n---------------------------\")\n",
+    "    print(f'Total Months: {total_months}')\n",
+    "    print(f'Total: ${total}')\n",
+    "    print(f'Average Change: ${average_change}')\n",
+    "    print(f'Greatest Increase in Profits: {increase_date}(${increase_amt})')\n",
+    "    print(f'Greatest Decrease in Profits: {decrease_date}(${decrease_amt})')\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Financial Analysis\n",
-      "\n",
-      "---------------------------\n",
-      "Total Months: 86\n",
-      "Total: $22564198\n",
-      "Average Change: $-8311.11\n",
-      "Greatest Increase in Profits: Aug-16($1862002)\n",
-      "Greatest Decrease in Profits: Feb-14($-1825558)\n"
-     ]
-    }
-   ],
-   "source": [
+    "#reset standard output to terminal   \n",
+    "sys.stdout = stdout_default\n",
     "\n",
+    "#reprint results to terminal \n",
     "print(\"Financial Analysis\")\n",
     "print(\"\\n---------------------------\")\n",
     "print(f'Total Months: {total_months}')\n",
@@ -102,15 +64,12 @@
     "print(f'Average Change: ${average_change}')\n",
     "print(f'Greatest Increase in Profits: {increase_date}(${increase_amt})')\n",
     "print(f'Greatest Decrease in Profits: {decrease_date}(${decrease_amt})')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
