Updating code/more cleanup

--- a/PyBank/main.pybank.ipynb
+++ b/PyBank/main.pybank.ipynb
@@ -10,6 +10,7 @@
     "import pandas as pd \n",
     "from pathlib import Path\n",
     "import sys\n",
+    "#define standard sys output (Terminal) \n",
     "stdout_default = sys.stdout \n",
     "\n",
     "#define input and output files for reading/writing\n",
