--- a/PyPoll/main_pypoll.ipynb
+++ b/PyPoll/main_pypoll.ipynb
@@ -10,6 +10,8 @@
     "import pandas as pd \n",
     "from pathlib import Path\n",
     "import sys\n",
+    "\n",
+    "#define standard sys output (Terminal) \n",
     "stdout_default = sys.stdout \n",
     "\n",
     "#define input and output files for reading/writing\n",
