Adding final Notes

--- a/PyBank/main_pybank.ipynb
+++ b/PyBank/main_pybank.ipynb
@@ -4,12 +4,29 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Financial Analysis\n",
+      "\n",
+      "---------------------------\n",
+      "Total Months: 86\n",
+      "Total: $22564198\n",
+      "Average Change: $-8311.11\n",
+      "Greatest Increase in Profits: Aug-16($1862002)\n",
+      "Greatest Decrease in Profits: Feb-14($-1825558)\n"
+     ]
+    }
+   ],
    "source": [
     "#import proper modules for analysis \n",
     "import pandas as pd \n",
     "from pathlib import Path\n",
     "import sys\n",
+    "\n",
     "#define standard sys output (Terminal) \n",
     "stdout_default = sys.stdout \n",
     "\n",
@@ -58,7 +75,7 @@
     "sys.stdout = stdout_default\n",
     "\n",
     "#reprint results to terminal \n",
-    "print(\"Financial Analysis\")\n",
+    "print(\"\\nFinancial Analysis\")\n",
     "print(\"\\n---------------------------\")\n",
     "print(f'Total Months: {total_months}')\n",
     "print(f'Total: ${total}')\n",
@@ -71,6 +88,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
